--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -435,12 +435,104 @@
                         <outlet property="smackProfileIcon" destination="PwX-mQ-WpJ" id="pP4-Cg-Aag"/>
                         <outlet property="username" destination="wLS-Ll-hBh" id="fbh-tE-S6m"/>
                         <segue destination="qiO-I3-Gvi" kind="unwind" identifier="UnwindSegue" unwindAction="prepareForUnwindWithSegue:" id="U1q-db-smF"/>
+                        <segue destination="rRZ-e0-3Ze" kind="show" identifier="toCreateAvatar" id="jhY-HV-g8j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nsp-WA-u9l" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="qiO-I3-Gvi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2836" y="-373.76311844077964"/>
+        </scene>
+        <!--Avatar View Controller-->
+        <scene sceneID="S3D-YQ-0WS">
+            <objects>
+                <viewController id="rRZ-e0-3Ze" customClass="AvatarViewController" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jwg-DV-9MN"/>
+                        <viewControllerLayoutGuide type="bottom" id="8e9-eO-d8d"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gpJ-Lt-w4g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bju-Bc-ugH">
+                                <rect key="frame" x="16" y="30" width="28" height="28"/>
+                                <state key="normal" image="smackBack"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="rRZ-e0-3Ze" eventType="touchUpInside" id="ldt-yz-aFy"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ANS-h7-1Pb">
+                                <rect key="frame" x="117.5" y="31" width="140" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="Eob-Lt-gvm"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="mQj-ZM-H8L">
+                                <rect key="frame" x="0.0" y="89" width="375" height="578"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="5" id="6sH-r2-vtt">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="15" minY="10" maxX="15" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="1Hj-o5-PqB" customClass="AvatarCell" customModule="Smack" customModuleProvider="target">
+                                        <rect key="frame" x="15" y="10" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NFV-yk-Wuz">
+                                                    <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="SgC-Ox-v1m"/>
+                                                        <constraint firstAttribute="width" constant="80" id="i0s-pF-dqX"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="NFV-yk-Wuz" firstAttribute="top" secondItem="1Hj-o5-PqB" secondAttribute="top" constant="10" id="7vt-qy-5NC"/>
+                                            <constraint firstAttribute="trailing" secondItem="NFV-yk-Wuz" secondAttribute="trailing" constant="10" id="DPr-yf-CVV"/>
+                                            <constraint firstAttribute="bottom" secondItem="NFV-yk-Wuz" secondAttribute="bottom" constant="10" id="lUg-hh-p1Y"/>
+                                            <constraint firstItem="NFV-yk-Wuz" firstAttribute="leading" secondItem="1Hj-o5-PqB" secondAttribute="leading" constant="10" id="z3N-1I-CTL"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="avatarImg" destination="NFV-yk-Wuz" id="6zR-ll-N1p"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="mQj-ZM-H8L" secondAttribute="trailing" id="Nu6-Il-ysz"/>
+                            <constraint firstItem="mQj-ZM-H8L" firstAttribute="top" secondItem="ANS-h7-1Pb" secondAttribute="bottom" constant="30" id="OuQ-eS-Yr9"/>
+                            <constraint firstItem="ANS-h7-1Pb" firstAttribute="centerX" secondItem="gpJ-Lt-w4g" secondAttribute="centerX" id="PBl-8d-jAF"/>
+                            <constraint firstItem="mQj-ZM-H8L" firstAttribute="leading" secondItem="gpJ-Lt-w4g" secondAttribute="leading" id="SZ2-QD-d1B"/>
+                            <constraint firstItem="Bju-Bc-ugH" firstAttribute="leading" secondItem="gpJ-Lt-w4g" secondAttribute="leadingMargin" id="WiX-kK-N8Q"/>
+                            <constraint firstItem="Bju-Bc-ugH" firstAttribute="top" secondItem="jwg-DV-9MN" secondAttribute="bottom" constant="10" id="bZG-ne-Tm8"/>
+                            <constraint firstItem="ANS-h7-1Pb" firstAttribute="top" secondItem="jwg-DV-9MN" secondAttribute="bottom" constant="11" id="hhq-mf-UUm"/>
+                            <constraint firstItem="8e9-eO-d8d" firstAttribute="top" secondItem="mQj-ZM-H8L" secondAttribute="bottom" id="lZA-3z-XjO"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="mQj-ZM-H8L" id="cYi-Fo-Vhj"/>
+                        <outlet property="segmentControl" destination="ANS-h7-1Pb" id="7uE-zN-Lsn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XYw-uu-LMk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3756" y="-377.36131934032989"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="Ig4-yn-IXw">
@@ -502,6 +594,7 @@
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
         <image name="smackProfileIcon" width="192" height="192"/>
